2012-03-08  Thomas Schwinge  <thomas@codesourcery.com>

	* tst-sem13.c (do_test): Add another test case.
	* sysdeps/unix/sysv/linux/i386/i486/sem_timedwait.S (sem_timedwait):
	Fix updating nwaiters.

2012-03-07  Joseph Myers  <joseph@codesourcery.com>

	[BZ #10545]
	* sysdeps/pthread/configure.in (libc_cv_forced_unwind): Change
	link test to a compile test.
	(libc_cv_c_cleanup): Likewise.  Declare puts rather than including
	<stdio.h>.
	* sysdeps/pthread/configure: Regenerated.

2012-03-07  Ulrich Drepper  <drepper@gmail.com>

	* Makefile (distribute): Remove variable.

2012-01-23  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/unix/sysv/linux/sem_timedwait.c (sem_timedwait): Get rid of
	superfluous assignment.
	* sysdeps/unix/sysv/linux/sparc/sem_timedwait.c (sem_timedwait):
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sem_timedwait.c
	(sem_timedwait): Likewise.

2012-03-06  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/pthread/bits/libc-lock.h: Move information not needed in
	installed headers to...
	* sysdeps/pthread/bits/libc-lockP.h: ...here.  New file.

2012-03-06  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/sem_post.c (__new_sem_post): Use
	atomic_increment and remove unused local variable.
	(__old_sem_post): Likewise.

2012-02-27  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h: Don't refer to
	non-existing __pthread_attr.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h: Likewise.

2012-02-26  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/pthread/pthread.h: Define __need_clockid_t for __USE_XOPEN2K.

	* sysdeps/pthread/pthread.h: Define __need_timespec before including
	<time.h>.