@@ -1,5 +1,8 @@
 2012-03-08  Thomas Schwinge  <thomas@codesourcery.com>
 
+	* sysdeps/unix/sysv/linux/sh/sem_timedwait.S (sem_timedwait): Fix
+	updating nwaiters.
+
 	* tst-sem13.c (do_test): Add another test case.
 	* sysdeps/unix/sysv/linux/i386/i486/sem_timedwait.S (sem_timedwait):
 	Fix updating nwaiters.
